# generate-readme

./: Cargo.toml  LICENSE  README.md
src/: lib.rs  main.rs  template.rs  ui.rs
templates/: Basic.md  Demo GIF.md  Essentials.md  Image and Shields.md  Standard with Image.md
