[package]
name = "generate-readme"
version = "0.1.3"
edition = "2021"
description = "A command-line utlity to help you generate README.md files."
repository = "https://github.com/jacobschwantes/generate-readme"
license = "MIT"
categories = ["command-line-utilities", "template-engine"]
keywords = ["readme", "generator", "markdown", "cli", "documentation"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dialoguer = "0.11.0"
dirs = "5.0.1"
clipboard = "0.5.0"
include_dir = "0.7.3"
clap = "4.4.7"
serde = {version="1.0.196", features = ["derive"]}
toml = "0.8.9"
